// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /forms SelectField 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="makeStyles-dropdown-661"
    onClick={[Function]}
  >
    <div
      className="MuiInputBase-root-665 makeStyles-root-662 makeStyles-root-664"
      onClick={[Function]}
      role="button"
    >
      <input
        autoComplete="off"
        className="MuiInputBase-input-675 makeStyles-input-663"
        name="SELECT_FIELD_ATTR"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
        value=""
      />
    </div>
    <img
      alt="Phone Menu"
      className="makeStyles-root-681 makeStyles-noShrink-682"
      height="5"
      src="selectChevron.svg"
      width="8"
    />
  </div>
</form>
`;

exports[`Storyshots Components Buttons 1`] = `
<div
  className="MuiBox-root-1 MuiBox-root-2"
>
  <div
    className="MuiBox-root-1 MuiBox-root-3"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Hower
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-24"
  >
    <button
      className="MuiButtonBase-root-21 MuiButtonBase-disabled-22 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-disabled-16"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-25"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedSecondary-14"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Cancel
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-26"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-text-6 MuiButton-textPrimary-7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Back
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-27"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-20"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Full Width
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-28"
  >
    <button
      aria-label="Export as CSV"
      className="MuiButtonBase-root-21 MuiFab-root-33 makeStyles-root-29 MuiFab-extended-37 makeStyles-extended-30 MuiFab-secondary-36 makeStyles-secondary-32 MuiFab-sizeSmall-41 makeStyles-sizeSmall-31"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiFab-label-34"
      >
        <div
          className="MuiBox-root-1 MuiBox-root-43"
        >
          <img
            alt="Download"
            className="makeStyles-root-44"
            height={16}
            src="download.svg"
            width={16}
          />
        </div>
        <div
          className="MuiBox-root-1 MuiBox-root-49"
        >
          <h6
            className="MuiTypography-root-54 MuiTypography-subtitle2-66 MuiTypography-colorTextPrimary-79 makeStyles-weight-52 makeStyles-weight-53"
          >
            Download
          </h6>
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components Hairline 1`] = `
Array [
  <div
    className="MuiBox-root-94 MuiBox-root-95"
  >
    <p
      className="MuiTypography-root-100 MuiTypography-body1-102 makeStyles-weight-98 makeStyles-weight-99"
    >
      Regular hairline without margin
    </p>
    <div
      className="MuiBox-root-94 MuiBox-root-130"
    />
  </div>,
  <div
    className="MuiBox-root-94 MuiBox-root-131"
  >
    <p
      className="MuiTypography-root-100 MuiTypography-body1-102 makeStyles-weight-98 makeStyles-weight-132"
    >
      Regular hairline with unit 1 margin
    </p>
    <div
      className="MuiBox-root-94 MuiBox-root-133"
    />
  </div>,
  <div
    className="MuiBox-root-94 MuiBox-root-134"
  >
    <p
      className="MuiTypography-root-100 MuiTypography-body1-102 makeStyles-weight-98 makeStyles-weight-135"
    >
      Regular hairline with unit 4 margin
    </p>
    <div
      className="MuiBox-root-94 MuiBox-root-136"
    />
  </div>,
  <div
    className="MuiBox-root-94 MuiBox-root-137"
  >
    <p
      className="MuiTypography-root-100 MuiTypography-body1-102 makeStyles-weight-98 makeStyles-weight-138"
    >
      Hairline with custom color
    </p>
    <div
      className="MuiBox-root-94 MuiBox-root-139"
    />
  </div>,
]
`;

exports[`Storyshots Components Images 1`] = `
<div
  className="MuiBox-root-140 MuiBox-root-141"
>
  <div
    className="MuiBox-root-140 MuiBox-root-142"
  >
    <img
      alt="Iov Logo"
      className="makeStyles-root-143"
      src="iov-logo.png"
    />
  </div>
  <div
    className="MuiBox-root-140 MuiBox-root-148"
  >
    <div
      className="MuiBox-root-140 MuiBox-root-149"
    >
      <img
        alt="Download"
        className="makeStyles-root-143"
        height={16}
        src="download.svg"
        width={16}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root-150 MuiBox-root-151"
>
  <div
    className="MuiBox-root-150 MuiBox-root-152"
  >
    <h4
      className="MuiTypography-root-157 MuiTypography-h4-165 MuiTypography-colorPrimary-180 makeStyles-weight-155 makeStyles-weight-156 makeStyles-inline-153"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root-157 MuiTypography-h4-165 makeStyles-weight-155 makeStyles-weight-187 makeStyles-inline-153"
    >

      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root-150 MuiBox-root-188"
  >
    <h6
      className="MuiTypography-root-157 MuiTypography-h6-167 makeStyles-weight-155 makeStyles-weight-189"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root-150 MuiBox-root-190"
  />
  <div
    className="MuiBox-root-150 MuiBox-root-191"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-192"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-197 MuiBox-root-198"
  >
    <label
      className="MuiFormControlLabel-root-199"
    >
      <span
        className="MuiSwitch-root-205"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-227 MuiIconButton-root-218 MuiPrivateSwitchBase-root-214 MuiSwitch-switchBase-206 MuiSwitch-colorPrimary-207"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-226"
          >
            <span
              className="MuiSwitch-thumb-212"
            />
            <input
              className="MuiPrivateSwitchBase-input-217 MuiSwitch-input-211"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-213"
        />
      </span>
      <span
        className="MuiTypography-root-230 MuiTypography-body1-232 MuiFormControlLabel-label-204"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-197 MuiBox-root-260"
  >
    <label
      className="MuiFormControlLabel-root-199"
    >
      <span
        className="MuiSwitch-root-205"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-227 MuiIconButton-root-218 MuiPrivateSwitchBase-root-214 MuiSwitch-switchBase-206 MuiSwitch-colorPrimary-207"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-226"
          >
            <span
              className="MuiSwitch-thumb-212"
            />
            <input
              className="MuiPrivateSwitchBase-input-217 MuiSwitch-input-211"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-213"
        />
      </span>
      <span
        className="MuiTypography-root-230 MuiTypography-body1-232 MuiFormControlLabel-label-204"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Toasts 1`] = `
Array [
  <div
    className="MuiBox-root-374 MuiBox-root-375"
  >
    <div
      className="MuiBox-root-374 MuiBox-root-376"
    >
      <div
        className="MuiBox-root-374 MuiBox-root-377"
      >
        <button
          className="MuiButtonBase-root-395 MuiButton-root-378 MuiButton-contained-386 MuiButton-containedPrimary-387"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-379"
          >
            Click to generate INFO toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-402 MuiTypography-body1-404 makeStyles-weight-400 makeStyles-weight-401"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-402 MuiTypography-body2-403 MuiPaper-root-443 MuiPaper-elevation6-451 MuiSnackbarContent-root-440 makeStyles-info-434"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-441"
        >
          <div
            className="MuiBox-root-374 MuiBox-root-470 makeStyles-message-438"
          >
            <div
              className="makeStyles-iconBackground-439"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-471"
                height={24}
                src="success.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-402 MuiTypography-subtitle1-413 makeStyles-info-434 makeStyles-weight-400 makeStyles-weight-476"
            >
              Hi INFO this is a cool feature. Stay tuned
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-442"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-395 MuiIconButton-root-477 MuiIconButton-colorSecondary-482"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-485"
            >
              <img
                alt="Close"
                className="makeStyles-root-471"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-374 MuiBox-root-486"
    >
      <div
        className="MuiBox-root-374 MuiBox-root-487"
      >
        <button
          className="MuiButtonBase-root-395 MuiButton-root-378 MuiButton-contained-386 MuiButton-containedPrimary-387"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-379"
          >
            Click to generate WARN toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-402 MuiTypography-body1-404 makeStyles-weight-400 makeStyles-weight-488"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-402 MuiTypography-body2-403 MuiPaper-root-443 MuiPaper-elevation6-451 MuiSnackbarContent-root-440 makeStyles-warning-435"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-441"
        >
          <div
            className="MuiBox-root-374 MuiBox-root-489 makeStyles-message-438"
          >
            <div
              className="makeStyles-iconBackground-439"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-471"
                height={24}
                src="warning.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-402 MuiTypography-subtitle1-413 makeStyles-warning-435 makeStyles-weight-400 makeStyles-weight-490"
            >
              Hi WARN
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-442"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-395 MuiIconButton-root-477 MuiIconButton-colorSecondary-482"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-485"
            >
              <img
                alt="Close"
                className="makeStyles-root-471"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-374 MuiBox-root-491"
    >
      <div
        className="MuiBox-root-374 MuiBox-root-492"
      >
        <button
          className="MuiButtonBase-root-395 MuiButton-root-378 MuiButton-contained-386 MuiButton-containedPrimary-387"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-379"
          >
            Click to generate ERROR toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-402 MuiTypography-body1-404 makeStyles-weight-400 makeStyles-weight-493"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-402 MuiTypography-body2-403 MuiPaper-root-443 MuiPaper-elevation6-451 MuiSnackbarContent-root-440 makeStyles-error-433"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-441"
        >
          <div
            className="MuiBox-root-374 MuiBox-root-494 makeStyles-message-438"
          >
            <div
              className="makeStyles-iconBackground-439"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-471"
                height={24}
                src="error.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-402 MuiTypography-subtitle1-413 makeStyles-error-433 makeStyles-weight-400 makeStyles-weight-495"
            >
              Hi ERR
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-442"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-395 MuiIconButton-root-477 MuiIconButton-colorSecondary-482"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-485"
            >
              <img
                alt="Close"
                className="makeStyles-root-471"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root-271 MuiBox-root-272"
  >
    <div
      className="makeStyles-container-274"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-277"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root-271 MuiBox-root-282"
  >
    <p
      className="MuiTypography-root-287 MuiTypography-body1-289 makeStyles-weight-285 makeStyles-weight-286 makeStyles-inline-283"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-274"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-277"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-321 MuiTypography-subtitle1-332 MuiTypography-colorPrimary-344 makeStyles-weight-319 makeStyles-weight-320"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-321 MuiTypography-h4-329 makeStyles-weight-319 makeStyles-weight-351"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-321 MuiTypography-subtitle1-332 MuiTypography-colorPrimary-344 makeStyles-weight-319 makeStyles-weight-352"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-321 MuiTypography-h5-330 makeStyles-weight-319 makeStyles-weight-353"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-321 MuiTypography-subtitle1-332 MuiTypography-colorPrimary-344 makeStyles-weight-319 makeStyles-weight-354"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-321 MuiTypography-h6-331 makeStyles-weight-319 makeStyles-weight-355"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-321 MuiTypography-subtitle1-332 MuiTypography-colorPrimary-344 makeStyles-weight-319 makeStyles-weight-356"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-321 MuiTypography-body1-323 makeStyles-weight-319 makeStyles-weight-357"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-321 MuiTypography-subtitle1-332 MuiTypography-colorPrimary-344 makeStyles-weight-319 makeStyles-weight-358"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-321 MuiTypography-body2-322 makeStyles-weight-319 makeStyles-weight-359"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-321 MuiTypography-subtitle1-332 MuiTypography-colorPrimary-344 makeStyles-weight-319 makeStyles-weight-360"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-321 MuiTypography-subtitle1-332 makeStyles-weight-319 makeStyles-weight-361"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-321 MuiTypography-subtitle1-332 MuiTypography-colorPrimary-344 makeStyles-weight-319 makeStyles-weight-362"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-321 MuiTypography-subtitle2-333 makeStyles-weight-319 makeStyles-weight-363"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-321 MuiTypography-subtitle1-332 MuiTypography-colorPrimary-344 makeStyles-weight-319 makeStyles-weight-364"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-321 MuiTypography-subtitle2-333 MuiTypography-colorPrimary-344 makeStyles-weight-319 makeStyles-weight-365 makeStyles-inline-317"
  >
    First part of the text.
  </h6>,
  <h6
    className="MuiTypography-root-321 MuiTypography-subtitle2-333 makeStyles-weight-319 makeStyles-weight-366 makeStyles-inline-317"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Components/forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-507 MuiFormControl-marginNormal-508 MuiTextField-root-506"
  >
    <label
      className="MuiFormLabel-root-523 MuiInputLabel-root-511 MuiInputLabel-formControl-517 MuiInputLabel-animated-520 MuiInputLabel-shrink-519"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-543 MuiOutlinedInput-root-530 MuiInputBase-formControl-544"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-559 MuiOutlinedInput-notchedOutline-537"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-560"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-553 MuiOutlinedInput-input-538"
        disabled={false}
        name="textFieldUniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <div
    className="MuiBox-root-561 MuiBox-root-562"
  >
    <div
      className="makeStyles-dropdown-563"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-543 makeStyles-root-564 makeStyles-root-566"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-553 makeStyles-input-565"
          name="selectFieldUniqueIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-567 makeStyles-noShrink-568"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-589 MuiButtonBase-disabled-590 MuiButton-root-572 MuiButton-contained-580 MuiButton-containedPrimary-581 MuiButton-disabled-584"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-573"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components/forms TextFieldForm 1`] = `
<div
  className="MuiBox-root-592 MuiBox-root-593"
>
  <div
    className="MuiBox-root-592 MuiBox-root-594"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-596 MuiFormControl-marginNormal-597 MuiTextField-root-595"
      >
        <label
          className="MuiFormLabel-root-612 MuiFormLabel-error-615 MuiInputLabel-error-603 MuiInputLabel-root-600 MuiInputLabel-formControl-606 MuiInputLabel-animated-609 MuiInputLabel-shrink-608"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-632 MuiOutlinedInput-root-619 MuiInputBase-error-638 MuiOutlinedInput-error-624 MuiInputBase-formControl-633"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-648 MuiOutlinedInput-notchedOutline-626"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-649"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-642 MuiOutlinedInput-input-627"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-650 MuiFormHelperText-contained-654 MuiFormHelperText-error-651"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-592 MuiBox-root-658"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-596 MuiFormControl-marginNormal-597 MuiTextField-root-595"
      >
        <label
          className="MuiFormLabel-root-612 MuiInputLabel-root-600 MuiInputLabel-formControl-606 MuiInputLabel-animated-609 MuiInputLabel-shrink-608"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-632 MuiOutlinedInput-root-619 MuiInputBase-formControl-633"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-648 MuiOutlinedInput-notchedOutline-626"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-649"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-642 MuiOutlinedInput-input-627"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-592 MuiBox-root-659"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-596 MuiFormControl-marginNormal-597 MuiTextField-root-595"
      >
        <label
          className="MuiFormLabel-root-612 MuiFormLabel-disabled-614 MuiInputLabel-disabled-602 MuiInputLabel-root-600 MuiInputLabel-formControl-606 MuiInputLabel-animated-609 MuiInputLabel-shrink-608"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-632 MuiOutlinedInput-root-619 MuiInputBase-disabled-635 MuiOutlinedInput-disabled-621 MuiInputBase-formControl-633"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-648 MuiOutlinedInput-notchedOutline-626"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-649"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-642 MuiOutlinedInput-input-627 MuiInputBase-disabled-635 MuiOutlinedInput-disabled-621"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-592 MuiBox-root-660"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-596 MuiFormControl-marginNormal-597 MuiTextField-root-595"
      >
        <label
          className="MuiFormLabel-root-612 MuiInputLabel-root-600 MuiInputLabel-formControl-606 MuiInputLabel-animated-609 MuiInputLabel-shrink-608"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-632 MuiOutlinedInput-root-619 MuiInputBase-formControl-633"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-648 MuiOutlinedInput-notchedOutline-626"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-649"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-642 MuiOutlinedInput-input-627"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-556 MuiBox-root-625"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-560 MuiFormControl-marginNormal-561 MuiTextField-root-559"
      >
        <label
          className="MuiFormLabel-root-576 MuiFormLabel-filled-580 MuiInputLabel-root-564 MuiInputLabel-formControl-570 MuiInputLabel-animated-573 MuiInputLabel-shrink-572"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-596 MuiOutlinedInput-root-583 MuiInputBase-formControl-597 MuiInputBase-multiline-604 MuiOutlinedInput-multiline-589"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-612 MuiOutlinedInput-notchedOutline-590"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-613"
              style={
                Object {
                  "width": 0,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <textarea
            aria-invalid={false}
            className="MuiInputBase-input-606 MuiOutlinedInput-input-591 MuiInputBase-inputMultiline-608 MuiOutlinedInput-inputMultiline-593"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows={5}
            value="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Routes/Account Show account status 1`] = `
<div
  className="MuiBox-root-693 MuiBox-root-694"
  id="/account"
>
  <div
    className="MuiBox-root-693 MuiBox-root-695"
  >
    <h4
      className="MuiTypography-root-700 MuiTypography-h4-708 MuiTypography-colorPrimary-723 makeStyles-weight-698 makeStyles-weight-699 makeStyles-inline-696"
    >
      Account
    </h4>
    <h4
      className="MuiTypography-root-700 MuiTypography-h4-708 makeStyles-weight-698 makeStyles-weight-730 makeStyles-inline-696"
    >

      Status
    </h4>
  </div>
  <div
    className="MuiBox-root-693 MuiBox-root-731"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-693 MuiBox-root-732"
      >
        <h6
          className="MuiTypography-root-700 MuiTypography-subtitle2-712 makeStyles-weight-698 makeStyles-weight-733"
        >
          Available accounts
        </h6>
      </div>
      <div
        className="makeStyles-dropdown-734"
        onClick={[Function]}
      >
        <div
          className="MuiInputBase-root-738 makeStyles-root-735 makeStyles-root-737"
          onClick={[Function]}
          role="button"
        >
          <input
            autoComplete="off"
            className="MuiInputBase-input-748 makeStyles-input-736"
            name="SELECT_FIELD_ATTR"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
        <img
          alt="Phone Menu"
          className="makeStyles-root-754 makeStyles-noShrink-755"
          height="5"
          src="selectChevron.svg"
          width="8"
        />
      </div>
    </form>
    <div
      className="MuiBox-root-693 MuiBox-root-759"
    />
    <div
      className="MuiBox-root-693 MuiBox-root-760"
    >
      <nav
        className="MuiList-root-761 MuiList-padding-762"
      >
        <div
          className="MuiBox-root-693 MuiBox-root-765"
        >
          <li
            className="MuiListItem-root-766 MuiListItem-default-769 MuiListItem-gutters-774"
            disabled={false}
          >
            <div
              className="MuiListItemText-root-778"
            >
              <p
                className="MuiTypography-root-700 MuiTypography-body1-702 makeStyles-weight-698 makeStyles-weight-784"
              >
                Transations
              </p>
            </div>
          </li>
        </div>
        <div
          className="MuiBox-root-693 MuiBox-root-785"
        />
        <div
          className="MuiBox-root-693 MuiBox-root-789"
        />
        <li
          className="MuiListItem-root-766 MuiListItem-default-769 MuiListItem-gutters-774 makeStyles-center-787"
          disabled={false}
        >
          <div
            className="MuiListItemIcon-root-790 makeStyles-empty-786"
          >
            <img
              alt="No Transations"
              className="makeStyles-root-754"
              height="42"
              src="uptodate.svg"
            />
          </div>
          <div
            className="MuiListItemText-root-778 makeStyles-text-788"
          >
            <span
              className="MuiTypography-root-700 MuiTypography-body1-702 MuiListItemText-primary-781"
            >
              No Transations
            </span>
          </div>
        </li>
      </nav>
    </div>
    <div
      className="MuiBox-root-693 MuiBox-root-791"
    >
      <nav
        className="MuiList-root-761 MuiList-padding-762"
      >
        <div
          className="MuiBox-root-693 MuiBox-root-792"
        >
          <li
            className="MuiListItem-root-766 MuiListItem-default-769 MuiListItem-gutters-774"
            disabled={false}
          >
            <div
              className="MuiListItemText-root-778"
            >
              <p
                className="MuiTypography-root-700 MuiTypography-body1-702 makeStyles-weight-698 makeStyles-weight-793"
              >
                Pending Transactions
              </p>
            </div>
          </li>
        </div>
        <div
          className="MuiBox-root-693 MuiBox-root-794"
        />
        <div
          className="MuiBox-root-693 MuiBox-root-795"
        />
        <li
          className="MuiListItem-root-766 MuiListItem-default-769 MuiListItem-gutters-774 makeStyles-center-787"
          disabled={false}
        >
          <div
            className="MuiListItemIcon-root-790 makeStyles-empty-786"
          >
            <img
              alt="No Pending Transactions"
              className="makeStyles-root-754"
              height="42"
              src="uptodate.svg"
            />
          </div>
          <div
            className="MuiListItemText-root-778 makeStyles-text-788"
          >
            <span
              className="MuiTypography-root-700 MuiTypography-body1-702 MuiListItemText-primary-781"
            >
              No Pending Transactions
            </span>
          </div>
        </li>
      </nav>
    </div>
  </div>
  <div
    className="MuiBox-root-693 MuiBox-root-796"
  />
  <div
    className="MuiBox-root-693 MuiBox-root-797"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-754"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Login Login page 1`] = `
<div
  className="MuiBox-root-805 MuiBox-root-806"
  id="/login"
>
  <div
    className="MuiBox-root-805 MuiBox-root-807"
  >
    <h4
      className="MuiTypography-root-812 MuiTypography-h4-820 MuiTypography-colorPrimary-835 makeStyles-weight-810 makeStyles-weight-811 makeStyles-inline-808"
    >
      Log
    </h4>
    <h4
      className="MuiTypography-root-812 MuiTypography-h4-820 makeStyles-weight-810 makeStyles-weight-842 makeStyles-inline-808"
    >

      In
    </h4>
  </div>
  <div
    className="MuiBox-root-805 MuiBox-root-843"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-805 MuiBox-root-844"
      >
        <div
          className="MuiFormControl-root-846 MuiFormControl-marginNormal-847 MuiFormControl-fullWidth-849 MuiTextField-root-845"
        >
          <div
            className="MuiInputBase-root-863 MuiOutlinedInput-root-850 MuiInputBase-fullWidth-872 MuiInputBase-formControl-864"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-879 MuiOutlinedInput-notchedOutline-857"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-880"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-873 MuiOutlinedInput-input-858"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-805 MuiBox-root-881"
      >
        <div
          className="MuiBox-root-805 MuiBox-root-882"
        >
          <button
            className="MuiButtonBase-root-900 MuiButtonBase-disabled-901 MuiButton-root-883 MuiButton-contained-891 MuiButton-containedPrimary-892 MuiButton-disabled-895 MuiButton-fullWidth-899"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-884"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
    <div
      className="MuiBox-root-805 MuiBox-root-903"
    >
      <div
        className="MuiBox-root-805 MuiBox-root-904"
      >
        <a
          href="/restore-account"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-812 MuiTypography-subtitle2-824 MuiTypography-colorPrimary-835 makeStyles-weight-810 makeStyles-weight-905 makeStyles-inline-808 makeStyles-link-809"
          >
            Restore account
          </h6>
        </a>
      </div>
      <div
        className="MuiBox-root-805 MuiBox-root-906"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-812 MuiTypography-subtitle2-824 MuiTypography-colorPrimary-835 makeStyles-weight-810 makeStyles-weight-907 makeStyles-inline-808 makeStyles-link-809"
          >
            More options
          </h6>
        </a>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-805 MuiBox-root-908"
  />
  <div
    className="MuiBox-root-805 MuiBox-root-909"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-910"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Recovery phrase Main 1`] = `
<div
  className="MuiBox-root-915 MuiBox-root-916"
  id="/recovery-phrase"
>
  <div
    className="MuiBox-root-915 MuiBox-root-917"
  >
    <h4
      className="MuiTypography-root-922 MuiTypography-h4-930 MuiTypography-colorPrimary-945 makeStyles-weight-920 makeStyles-weight-921 makeStyles-inline-918"
    >
      Recovery
    </h4>
    <h4
      className="MuiTypography-root-922 MuiTypography-h4-930 makeStyles-weight-920 makeStyles-weight-952 makeStyles-inline-918"
    >

      phrase
    </h4>
  </div>
  <div
    className="MuiBox-root-915 MuiBox-root-953"
  >
    <div
      className="MuiBox-root-915 MuiBox-root-954"
    >
      <h6
        className="MuiTypography-root-922 MuiTypography-subtitle2-934 makeStyles-weight-920 makeStyles-weight-955"
      >
        Your Recovery Phrase are 12 random words that are set in a particular order that acts as a tool to recover or back up your wallet on any platform.
      </h6>
    </div>
    <div
      className="MuiBox-root-915 MuiBox-root-956"
    >
      <button
        aria-label="Export as CSV"
        className="MuiButtonBase-root-971 MuiFab-root-961 makeStyles-root-957 MuiFab-extended-965 makeStyles-extended-958 MuiFab-secondary-964 makeStyles-secondary-960 MuiFab-sizeSmall-969 makeStyles-sizeSmall-959"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiFab-label-962"
        >
          <div
            className="MuiBox-root-915 MuiBox-root-974"
          >
            <img
              alt="Download"
              className="makeStyles-root-975"
              height={16}
              src="download.svg"
              width={16}
            />
          </div>
          <div
            className="MuiBox-root-915 MuiBox-root-980"
          >
            <h6
              className="MuiTypography-root-922 MuiTypography-subtitle2-934 MuiTypography-colorTextPrimary-947 makeStyles-weight-920 makeStyles-weight-981"
            >
              Export as .PDF
            </h6>
          </div>
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-915 MuiBox-root-982"
    >
      <p
        className="MuiTypography-root-922 MuiTypography-body1-924 makeStyles-weight-920 makeStyles-weight-983 makeStyles-inline-918"
      >

      </p>
    </div>
    <div
      className="MuiBox-root-915 MuiBox-root-984"
    >
      <div
        className="MuiBox-root-915 MuiBox-root-985"
      >
        <button
          className="MuiButtonBase-root-971 MuiButton-root-986 MuiButton-text-988 MuiButton-textPrimary-989 MuiButton-fullWidth-1002"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-987"
          >
            Back
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-915 MuiBox-root-1003"
  />
  <div
    className="MuiBox-root-915 MuiBox-root-1004"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-975"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-1015 MuiBox-root-1016"
  id="/signup1"
>
  <div
    className="MuiBox-root-1015 MuiBox-root-1017"
  >
    <h4
      className="MuiTypography-root-1022 MuiTypography-h4-1030 MuiTypography-colorPrimary-1045 makeStyles-weight-1020 makeStyles-weight-1021 makeStyles-inline-1018"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1022 MuiTypography-h4-1030 makeStyles-weight-1020 makeStyles-weight-1052 makeStyles-inline-1018"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1015 MuiBox-root-1053"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-1015 MuiBox-root-1054"
      >
        <div
          className="MuiFormControl-root-1056 MuiFormControl-marginNormal-1057 MuiFormControl-fullWidth-1059 MuiTextField-root-1055"
        >
          <label
            className="MuiFormLabel-root-1072 MuiFormLabel-required-1077 MuiInputLabel-required-1064 MuiInputLabel-root-1060 MuiInputLabel-formControl-1066 MuiInputLabel-animated-1069 MuiInputLabel-shrink-1068"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-1078 MuiInputLabel-asterisk-1065"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1092 MuiOutlinedInput-root-1079 MuiInputBase-fullWidth-1101 MuiInputBase-formControl-1093"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1108 MuiOutlinedInput-notchedOutline-1086"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1109"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1102 MuiOutlinedInput-input-1087"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1015 MuiBox-root-1110"
      >
        <div
          className="MuiFormControl-root-1056 MuiFormControl-marginNormal-1057 MuiFormControl-fullWidth-1059 MuiTextField-root-1055"
        >
          <label
            className="MuiFormLabel-root-1072 MuiFormLabel-required-1077 MuiInputLabel-required-1064 MuiInputLabel-root-1060 MuiInputLabel-formControl-1066 MuiInputLabel-animated-1069 MuiInputLabel-shrink-1068"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-1078 MuiInputLabel-asterisk-1065"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1092 MuiOutlinedInput-root-1079 MuiInputBase-fullWidth-1101 MuiInputBase-formControl-1093"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1108 MuiOutlinedInput-notchedOutline-1086"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1109"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1102 MuiOutlinedInput-input-1087"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1015 MuiBox-root-1111"
      >
        <div
          className="MuiFormControl-root-1056 MuiFormControl-marginNormal-1057 MuiFormControl-fullWidth-1059 MuiTextField-root-1055"
        >
          <label
            className="MuiFormLabel-root-1072 MuiFormLabel-required-1077 MuiInputLabel-required-1064 MuiInputLabel-root-1060 MuiInputLabel-formControl-1066 MuiInputLabel-animated-1069 MuiInputLabel-shrink-1068"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-1078 MuiInputLabel-asterisk-1065"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1092 MuiOutlinedInput-root-1079 MuiInputBase-fullWidth-1101 MuiInputBase-formControl-1093"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1108 MuiOutlinedInput-notchedOutline-1086"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1109"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1102 MuiOutlinedInput-input-1087"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1015 MuiBox-root-1112"
      >
        <div
          className="MuiBox-root-1015 MuiBox-root-1113"
        >
          <button
            className="MuiButtonBase-root-1131 MuiButton-root-1114 MuiButton-text-1116 MuiButton-textPrimary-1117 MuiButton-fullWidth-1130"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1115"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-1015 MuiBox-root-1134"
        >
          <button
            className="MuiButtonBase-root-1131 MuiButtonBase-disabled-1132 MuiButton-root-1114 MuiButton-contained-1122 MuiButton-containedPrimary-1123 MuiButton-disabled-1126 MuiButton-fullWidth-1130"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-1115"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1015 MuiBox-root-1135"
  />
  <div
    className="MuiBox-root-1015 MuiBox-root-1136"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1137"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-1152 MuiBox-root-1153"
  id="/signup2"
>
  <div
    className="MuiBox-root-1152 MuiBox-root-1154"
  >
    <h4
      className="MuiTypography-root-1159 MuiTypography-h4-1167 MuiTypography-colorPrimary-1182 makeStyles-weight-1157 makeStyles-weight-1158 makeStyles-inline-1155"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1159 MuiTypography-h4-1167 makeStyles-weight-1157 makeStyles-weight-1189 makeStyles-inline-1155"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1152 MuiBox-root-1190"
  >
    <div
      className="MuiBox-root-1152 MuiBox-root-1191"
    >
      <div
        className="MuiBox-root-1152 MuiBox-root-1192"
      >
        <div
          className="MuiBox-root-1152 MuiBox-root-1193"
        >
          <h6
            className="MuiTypography-root-1159 MuiTypography-subtitle2-1171 makeStyles-weight-1157 makeStyles-weight-1194 makeStyles-inline-1155"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-1196"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-1199"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root-1204"
      >
        <span
          className="MuiSwitch-root-1210"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root-1232 MuiIconButton-root-1223 MuiPrivateSwitchBase-root-1219 MuiSwitch-switchBase-1211 MuiSwitch-colorPrimary-1212"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-1231"
            >
              <span
                className="MuiSwitch-thumb-1217"
              />
              <input
                className="MuiPrivateSwitchBase-input-1222 MuiSwitch-input-1216"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-track-1218"
          />
        </span>
        <span
          className="MuiTypography-root-1159 MuiTypography-body1-1161 MuiFormControlLabel-label-1209"
        />
      </label>
    </div>
    <div
      className="MuiBox-root-1152 MuiBox-root-1235"
    >
      <p
        className="MuiTypography-root-1159 MuiTypography-body1-1161 makeStyles-weight-1157 makeStyles-weight-1236 makeStyles-inline-1155"
      >

      </p>
    </div>
    <div
      className="MuiBox-root-1152 MuiBox-root-1237"
    >
      <div
        className="MuiBox-root-1152 MuiBox-root-1238"
      >
        <button
          className="MuiButtonBase-root-1232 MuiButton-root-1239 MuiButton-text-1241 MuiButton-textPrimary-1242 MuiButton-fullWidth-1255"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1240"
          >
            Back
          </span>
        </button>
      </div>
      <div
        className="MuiBox-root-1152 MuiBox-root-1256"
      >
        <button
          className="MuiButtonBase-root-1232 MuiButton-root-1239 MuiButton-contained-1247 MuiButton-containedPrimary-1248 MuiButton-fullWidth-1255"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1240"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-1152 MuiBox-root-1257"
  />
  <div
    className="MuiBox-root-1152 MuiBox-root-1258"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1199"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root-1269 MuiBox-root-1270"
  id="/signup3"
>
  <div
    className="MuiBox-root-1269 MuiBox-root-1271"
  >
    <h4
      className="MuiTypography-root-1276 MuiTypography-h4-1284 MuiTypography-colorPrimary-1299 makeStyles-weight-1274 makeStyles-weight-1275 makeStyles-inline-1272"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1276 MuiTypography-h4-1284 makeStyles-weight-1274 makeStyles-weight-1306 makeStyles-inline-1272"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1269 MuiBox-root-1307"
  >
    <h6
      className="MuiTypography-root-1276 MuiTypography-subtitle1-1287 makeStyles-weight-1274 makeStyles-weight-1308 makeStyles-inline-1272"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-1269 MuiBox-root-1309"
      >
        <div
          className="MuiFormControl-root-1311 MuiFormControl-marginNormal-1312 MuiFormControl-fullWidth-1314 MuiTextField-root-1310"
        >
          <div
            className="MuiInputBase-root-1328 MuiOutlinedInput-root-1315 MuiInputBase-fullWidth-1337 MuiInputBase-formControl-1329"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1344 MuiOutlinedInput-notchedOutline-1322"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1345"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1338 MuiOutlinedInput-input-1323"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1269 MuiBox-root-1346"
      >
        <div
          className="MuiBox-root-1269 MuiBox-root-1347"
        >
          <button
            className="MuiButtonBase-root-1365 MuiButton-root-1348 MuiButton-text-1350 MuiButton-textPrimary-1351 MuiButton-fullWidth-1364"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1349"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-1269 MuiBox-root-1368"
        >
          <button
            className="MuiButtonBase-root-1365 MuiButton-root-1348 MuiButton-contained-1356 MuiButton-containedPrimary-1357 MuiButton-fullWidth-1364"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-1349"
            >
              Create
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1269 MuiBox-root-1369"
  />
  <div
    className="MuiBox-root-1269 MuiBox-root-1370"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1371"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-1386 MuiBox-root-1387"
  id="/welcome"
>
  <div
    className="MuiBox-root-1386 MuiBox-root-1388"
  >
    <h4
      className="MuiTypography-root-1393 MuiTypography-h4-1401 MuiTypography-colorPrimary-1416 makeStyles-weight-1391 makeStyles-weight-1392 makeStyles-inline-1389"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root-1393 MuiTypography-h4-1401 makeStyles-weight-1391 makeStyles-weight-1423 makeStyles-inline-1389"
    >

      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root-1386 MuiBox-root-1424"
  >
    <p
      className="MuiTypography-root-1393 MuiTypography-body1-1395 makeStyles-weight-1391 makeStyles-weight-1425 makeStyles-inline-1389"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-1386 MuiBox-root-1426"
    />
    <button
      className="MuiButtonBase-root-1444 MuiButton-root-1427 MuiButton-contained-1435 MuiButton-containedPrimary-1436 MuiButton-fullWidth-1443"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1428"
      >
        Log in
      </span>
    </button>
    <div
      className="MuiBox-root-1386 MuiBox-root-1447"
    />
    <button
      className="MuiButtonBase-root-1444 MuiButton-root-1427 MuiButton-contained-1435 MuiButton-containedPrimary-1436 MuiButton-fullWidth-1443"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1428"
      >
        New account
      </span>
    </button>
    <div
      className="MuiBox-root-1386 MuiBox-root-1448"
    />
    <button
      className="MuiButtonBase-root-1444 MuiButton-root-1427 MuiButton-contained-1435 MuiButton-containedPrimary-1436 MuiButton-fullWidth-1443"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1428"
      >
        Import account
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1386 MuiBox-root-1449"
  />
  <div
    className="MuiBox-root-1386 MuiBox-root-1450"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1451"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
